@@ -41,6 +41,7 @@ public abstract class DocFactoryTest {
 	protected static final String TEMPLATE_PERSON_DOCX = "resources/template_person.docx";
 	protected static final String TEMPLATE_WITH_FIELDS_FORM_DOCX = "resources/template_with_field_form.docx";
 	protected static final String TEMPLATE_FOR_TESTING_NULL_VALUES_DOCX = "resources/template_for_testing_null_value.docx";
+	protected static final String TEMPLATE_FOR_TESTING_LONG_EDITABLE_FIELDS_DOCX = "resources/template_with_long_editable_fields.docx";
 
 	@Before
 	public void setup() throws Exception {
